# masters

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  test.cpp
docker/: build.py
docker/SLAM/: Dockerfile  docker-compose.yml
docker/build-context/: Dockerfile  index.txt
docker/localization/: Dockerfile  docker-compose.yml
docker/navigation/: Dockerfile  docker-compose.yml
docker/run/config/amcl/: amcl.yaml
docker/run/config/map_server/: map.yaml  map_server.yaml
docker/run/config/map_server/maps/: hector_mini_map.yaml  hector_mini_map2.yaml  large_map_hector_2.yaml  maps_combine.yaml  new_poligon_map.yaml
docker/run/config/rmw/: fastdds.xml
docker/run/launch/amcl/: amcl.launch.py
docker/run/launch/map_server/: map_server.launch.py  up.env
docker/utils/: Dockerfile  docker-compose.yml
include/: message.hpp  server.hpp
include/client/: client.hpp  mcontainer_setting.hpp
include/client/gui/: main_window.hpp  server_container_create_box.hpp  server_credental_box.hpp  server_error_box.hpp  server_widget.hpp
include/client/gui/boxes/: server_container_create_box.hpp  server_credental_box.hpp  server_image_build_box.hpp  server_info_box.hpp
include/server/: message_handler.hpp  server.hpp
include/utils/: message.hpp  threadsafe_deque.hpp
include/utils/NetCodec/: client_codec.hpp  codec.hpp  decoder.hpp  encoder.hpp  server_codec.hpp
include/utils/TDequeImpl/: threadsafe_deque_impl.hpp
src/: client.cpp  main.cpp  server.cpp  test.cpp
src/client/: client.cpp  main.cpp
src/client/gui/: main_window.cpp  server_widget.cpp
src/client/gui/boxes/: server_container_create_box.cpp  server_credental_box.cpp  server_image_build_box.cpp  server_info_box.cpp
src/server/: main.cpp  message_handler.cpp  server.cpp
src/utils/: message.cpp
src/utils/NetCodec/: client_codec.cpp  codec.cpp  decoder.cpp  encoder.cpp  server_codec.cpp
